[package]
name = "trybuild-internals-api"
version = "1.0.114"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
categories = ["development-tools::testing"]
description = "A fork of trybuild with the internals exposed as a public API"
documentation = "https://docs.rs/trybuild-internals-api"
edition = "2021"
exclude = ["build.rs", "screenshots/*"]
keywords = ["macros", "testing", "dev-dependencies"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hydro-project/trybuild"
rust-version = "1.76"

[features]
# Experimental: highlight the diff between the expected and actual compiler
# output. Currently unix-only. If you test this out, please provide any feedback
# in https://github.com/dtolnay/trybuild/issues/41.
diff = ["dep:dissimilar"]

[dependencies]
dissimilar = { version = "1.0", optional = true }
glob = "0.3"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
target-triple = "1.0"
termcolor = "1.0.4"
toml = "0.9"

[dev-dependencies]
automod = "1.0.10"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
